--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Kauefranca/CadastroVacina#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "puppeteer": "^10.0.0"
   }
 }
