--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Kauefranca/CadastroVacina#readme",
   "dependencies": {
     "axios": "^0.21.1",
-    "puppeteer": "^10.0.0"
+    "puppeteer": "^10.0.0",
+    "qs": "^6.10.1"
   }
 }
